feat(jwks): new endpoints to add keys issues#36
